--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@types/express": "^4.17.9",
     "express": "^4.17.1",
-    "knex": "^0.21.12"
+    "knex": "^0.21.12",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "ts-node-dev": "^1.0.0",
