--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.9",
+    "@types/multer": "^1.4.4",
     "express": "^4.17.1",
     "knex": "^0.21.12",
+    "multer": "^1.4.2",
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
